--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -4,7 +4,7 @@
     Address: <%= station['street_address'] %><br>
     Fuel Types: <%= station['fuel_type_code'] %><br>
     Distance: <%= station['distance'] %><br>
-    Access times: <%= station['access_day_times'] %>br
+    Access times: <%= station['access_days_time'] %><br>
   </div>
 <% end %>
 # And for each of the stations I should see Name, Address, Fuel Types, Distance, and Access Times
